--- a/less/global.less
+++ b/less/global.less
@@ -9,7 +9,7 @@
   html, body {
     font-family: 'Ubuntu', sans-serif;
     color: @main-font-color;
-    background-color: @river-bend;
+    background-color: black;
     // background-image: url("../imgs/man-carrying-barbel-791763.jpg");
   }
   
@@ -20,6 +20,8 @@
   
   h2 {
     font-size: 3.2rem;
+    color:#FBB338;
+    margin-bottom: 1%;
   }
   
   h3 {
