--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ html,
 body {
   font-family: 'Ubuntu', sans-serif;
   color: #5E6164;
-  background-color: #454A59;
+  background-color: black;
 }
 h1,
 h2,
@@ -148,6 +148,8 @@ h5 {
 }
 h2 {
   font-size: 3.2rem;
+  color: #FBB338;
+  margin-bottom: 1%;
 }
 h3 {
   font-size: 2.8rem;
@@ -167,6 +169,7 @@ nav h1 {
   margin-bottom: 1%;
   margin-top: 1%;
   margin-left: 3%;
+  color: #FBB338;
 }
 nav .links {
   display: flex;
@@ -178,14 +181,12 @@ nav .links a {
   font-size: 1.7rem;
   margin: 1% 2% 1% 2%;
   font-weight: bold;
-  color: black;
+  color: #FBB338;
 }
 footer {
-  color: #22283B;
-  background: #f4f4f4;
+  color: #FBB338;
+  background: black;
   padding: 20px 0;
-  border: 1px double #e0e0e0;
-  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -195,6 +196,17 @@ footer {
     display: flex;
     flex-direction: column;
   }
+}
+.home .intro {
+  background-image: url('../imgs/man-carrying-barbel-791763.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 0 20px;
 }
 @media (max-width: 500px) {
   .home .intro {
@@ -206,25 +218,10 @@ footer {
 }
 .home .intro h2 {
   padding: 15px;
+  color: #FBB338;
 }
 .home .intro p {
   padding: 0 15px;
-}
-@media (max-width: 500px) {
-  .home .intro .intro-img {
-    display: flex;
-    width: 100%;
-    align-items: center;
-  }
-}
-.home .intro .intro-img img {
-  width: 100%;
-  height: 80vh;
-}
-@media (max-width: 500px) {
-  .home .intro .intro-img img {
-    width: 100%;
-  }
 }
 .home .features {
   display: flex;
