--- a/less/footer.less
+++ b/less/footer.less
@@ -1,9 +1,9 @@
 footer {
-    color: #22283B;
-    background: #f4f4f4;
+    color: #FBB338;
+    background: black;
     padding: 20px 0;
-    border: 1px double #e0e0e0;
-    border-radius: 10px;
+    // border: 1px double #e0e0e0;
+    // border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
