--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,16 @@
       
     }
   .intro {
+
+    background-image: url('../imgs/man-carrying-barbel-791763.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 0 20px;
     @media @phone{
       // display: flex;
       // flex-direction: column;
@@ -17,28 +27,34 @@
 
     h2 {
       padding: 15px;
+      color:#FBB338;
     }
 
     p {
       padding:0 15px;
     }
 
-    .intro-img {
-        
-      @media @phone {
-        display: flex;
-        width:100%;
-        align-items: center;
-      }
+    
+   
+    // .intro-img {
 
-      img {
-          width:100%;
-          height: 80vh;
-        @media @phone{
-          width: 100%;
-        }
-      }
-    }
+    //   // background-image: url("../imgs/man-holding-barbell-1431282.jpg");
+        
+    //   @media @phone {
+    //     display: flex;
+    //     width:100%;
+    //     align-items: center;
+    //   }
+
+    //   img {
+    //       width:100%;
+    //       height: 80vh;
+
+    //     @media @phone{
+    //       width: 100%;
+    //     }
+    //   }
+    // }
   
   }
 
