--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,7 @@ nav {
         margin-bottom: 1%;
         margin-top: 1%;
         margin-left: 3%;
+        color:#FBB338;
     }
 
     .links {
@@ -21,8 +22,16 @@ nav {
             font-size: 1.7rem;
             margin: 1% 2% 1% 2%;
             font-weight: bold;
-            color: black;
+            color: #FBB338;
+
+
+
+            
         }
+
+    
+
+        
     }
 
 }
