--- a/less/home-page.less
+++ b/less/home-page.less
@@ -86,6 +86,34 @@
         justify-content: center;
         margin: 2%;
         
+         .btn {
+      display: flex;
+      flex-direction: column;
+      margin-top: 10%;
+
+     
+          
+      button{
+        color:#FBB338;
+  background-color: #22283A;
+  padding: 2%;
+  width: 50%;
+  font-size: 1.6rem;
+  border-radius: 1rem;
+          @media @phone{
+            width: 100%;
+            font-size: 2rem;
+            padding: 3%;
+          }
+
+          #one {
+            @media @phone{
+              display:hidden;
+            }
+        }
+      }
+      
+    }
      
     }
 
@@ -105,6 +133,8 @@
       
   
     }
+
+   
 
 }
 }
