--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,21 +1,39 @@
 
 nav {
+
+   
    
 
-    h1 {
-        text-align: left;
-        font-size: 3.0rem;
-        margin-bottom: 1%;
-        margin-top: 1%;
-        margin-left: 3%;
-        color:#FBB338;
-    }
+    
 
     .links {
         display: flex;
         justify-content: start;
         align-items: center;
         flex-direction: row;
+
+        h1 {
+            text-align: left;
+            font-size: 3.0rem;
+            margin-bottom: 1%;
+            margin-top: 1%;
+            margin-left: 3%;
+            color:#FBB338;
+            flex-direction: row;
+            
+            @media @phone{
+                text-align: center;
+                justify-content: center;
+                flex-direction: column;
+                // margin: 1% 3% 2% 15%;
+                margin:auto;
+                padding: 2%;
+                font-size: 6rem;
+            }
+            
+        }
+
+        
         
 
         a{
@@ -24,7 +42,11 @@ nav {
             font-weight: bold;
             color: #FBB338;
 
-
+            @media @phone{
+                display: none;
+                
+        
+            }
 
             
         }
@@ -34,4 +56,55 @@ nav {
         
     }
 
+}
+
+.side-nav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    opacity: 0.9;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.8s;
+}
+.side-nav a {
+    padding: 10px 10px 10px 30px;
+    text-decoration: none;
+    font-size: 22px;
+    color: #ccc;
+    display: block;
+    transition: 0.8s;
+}
+.side-nav a:hover {
+    color: #FBB338;
+    background-color: #06A8FF;
+}
+.side-nav .btn-close {
+    position: absolute;
+    top: 0;
+    right: 22px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+#main {
+    transition: margin-left 0.5s;
+    padding: 20px;
+    overflow: hidden;
+    width: 100%;
+}
+
+@media (max-width: 500px) {
+    .navbar-nav {
+        display: none;
+        
+    }
+}
+@media (min-width: 501px) {
+    .open-slide {
+        display: none;
+    }
 }
