--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,6 +11,11 @@ nav {
         justify-content: start;
         align-items: center;
         flex-direction: row;
+        
+
+        :hover{
+            background-color: #06a8ff;
+        }
 
         h1 {
             text-align: left;
@@ -20,6 +25,7 @@ nav {
             margin-left: 3%;
             color:#FBB338;
             flex-direction: row;
+            padding:1%;
             
             @media @phone{
                 text-align: center;
@@ -41,6 +47,9 @@ nav {
             margin: 1% 2% 1% 2%;
             font-weight: bold;
             color: #FBB338;
+            text-decoration: none;
+            padding: 1%;
+          
 
             @media @phone{
                 display: none;
