--- a/css/index.css
+++ b/css/index.css
@@ -169,6 +169,9 @@ nav .links {
   align-items: center;
   flex-direction: row;
 }
+nav .links :hover {
+  background-color: #06a8ff;
+}
 nav .links h1 {
   text-align: left;
   font-size: 3rem;
@@ -177,6 +180,7 @@ nav .links h1 {
   margin-left: 3%;
   color: #FBB338;
   flex-direction: row;
+  padding: 1%;
 }
 @media (max-width: 500px) {
   nav .links h1 {
@@ -193,6 +197,8 @@ nav .links a {
   margin: 1% 2% 1% 2%;
   font-weight: bold;
   color: #FBB338;
+  text-decoration: none;
+  padding: 1%;
 }
 @media (max-width: 500px) {
   nav .links a {
@@ -313,6 +319,9 @@ footer {
   flex-direction: column;
   margin-top: 10%;
 }
+.home .workout-imgs div .btn :hover {
+  background-color: #06a8ff;
+}
 .home .workout-imgs div .btn button {
   color: #FBB338;
   background-color: #22283A;
@@ -342,5 +351,50 @@ footer {
 @media (max-width: 500px) {
   .home .workout-imgs img {
     width: 90%;
+  }
+}
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+input[type=submit] {
+  background-color: #22283A;
+  color: #FBB338;
+  padding: 12px 20px;
+  cursor: pointer;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+}
+input[type=submit]:hover {
+  background-color: #06a8ff;
+}
+/* Style the container/contact section */
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+  font-size: 1.7rem;
+  color: #FBB338;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column,
+  input[type=submit] {
+    width: 100%;
+    margin-top: 0;
   }
 }
