--- a/less/home-page.less
+++ b/less/home-page.less
@@ -36,25 +36,7 @@
 
     
    
-    // .intro-img {
-
-    //   // background-image: url("../imgs/man-holding-barbell-1431282.jpg");
-        
-    //   @media @phone {
-    //     display: flex;
-    //     width:100%;
-    //     align-items: center;
-    //   }
-
-    //   img {
-    //       width:100%;
-    //       height: 80vh;
-
-    //     @media @phone{
-    //       width: 100%;
-    //     }
-    //   }
-    // }
+    
   
   }
 
@@ -91,6 +73,10 @@
       flex-direction: column;
       margin-top: 10%;
 
+      :hover{
+        background-color: #06a8ff;
+    }
+
      
           
       button{
@@ -100,6 +86,8 @@
   width: 50%;
   font-size: 1.6rem;
   border-radius: 1rem;
+
+
           @media @phone{
             width: 100%;
             font-size: 2rem;
